--- a/assets/css/style-work_page.css
+++ b/assets/css/style-work_page.css
@@ -1,16 +1,17 @@
 .work_page_main {
     position: absolute;
     top: 25%;
-    bottom: 0;
     left: 0;
     right: 0;
+
+    font-size: 1vw;
 }
 
 .work_player {
     display: flex;
     flex-direction: column;
     align-content: center;
-    margin: 0vw 10vw;
+    margin: 0vw 10vw 2vw 10vw;
 }
 
 .work_player div {
@@ -35,4 +36,32 @@
 
 .song_block audio {
     width: 41%;
+}
+
+.work_section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin: 2vw 0vw;
+}
+
+.work_section_title {
+    width: 80%;
+    font-size: 4vw;
+}
+
+.work_section_title p {
+    text-align: center;
+}
+
+.lyrics_text {
+    display: flex;
+    width: 80%;
+    justify-content: center;
+    font-size: 1vw;
+}
+
+.lyrics_text div {
+    margin: 0vw 3vw;
 }
