--- a/assets/css/style-nav.css
+++ b/assets/css/style-nav.css
@@ -1,7 +1,6 @@
 .navbar {
     display: flex;
     flex-direction: row;
-    align-items: top;
     justify-content: space-between;
     position: fixed;
     background: linear-gradient(180deg, rgba(0,0,0,.8), rgba(255,0,0,0) 100%);
@@ -10,38 +9,49 @@
     left: 0;
     right: 0;
 
+    opacity: 1;
+
     padding-right: 1vw;
     padding-bottom: 3vw;
     margin-top: 0vw;
 
-    transition: all 0.5s;
+    transition: top 0.5s, opacity 0.5s;
 
     z-index: 100;
 }
 
 .navbar-scrolled {
     opacity: 0;
+    top: -15vw;
+
+    transition: top 2s, opacity 0.5s;
 }
 
 .nav_opt {
-    flex: 15;
+    flex: 13.5vw;
 
     color: white;
     font-style: normal;
     text-decoration: none;
     text-align: center;
     border-width: 0;
-    font-size: 2.5vw;
+    font-size: calc(12px + 1.75vw);
     text-shadow: 1px 1px 2px rgba(0,0,0,1);
+}
 
-    border-radius: 0px;
+.nav_opt a {
+    text-decoration: none;
+}
+
+.nav_blank {
+    flex: 100;
 }
 
 .nav_opt p {
     margin: 0;
-    padding: 2vw 0vw;
+    padding: 2vw 1vw;
 
-    transition: all 0.25s;
+    transition: opacity 0.25s;
 }
 
 .nav_opt p:hover {
@@ -60,18 +70,17 @@
     font-size: 150%;
     text-shadow: 1px 1px 2px rgba(0,0,0,1);
 
-    height: 100%;
+    min-width: 200px;
+    min-height: 80px;
     padding-top: 0vw;
-    padding-left: 2vw;
-    flex: 65;
+    padding-left: 1vw;
 }
 
 .brand_box img {
-    flex: 5;
     height: 8vw;
-    min-height: 0px;
+    min-height: 50px;
     object-fit: contain;
-    padding: 0% 0%;
+    padding-right: 1vw;
 
     filter: drop-shadow(1px 1px 2px #000000);
 }
@@ -80,21 +89,29 @@
     display: flex;
     align-items: center;
     justify-items: left;
+    width: 100%;
+
+    padding-top: 1vw;
+    padding-left: 1vw;
+}
+
+.brand_text {
     height: 100%;
+    min-height: 50px;
+    min-width: 70px;
 }
 
 .brand_box div {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 1vw;
 }
 
 nav .brand .brand_box .title {
     flex: 1;
     font-weight: 100;
     font-style: normal;
-    font-size: 4.6vw;
+    font-size: calc(10px + 5vw);
     margin: 0% 0%;
 
     padding-bottom: 0vw;
@@ -102,7 +119,7 @@ nav .brand .brand_box .title {
 
 nav .brand .brand_box .tagline {
     flex: 1;
-    font-size: 1.46vw;
+    font-size: calc(3.14px + 1.57vw);
     margin: 0% 0%;
     padding-bottom: 1vw;
 }
