--- a/assets/css/style-work_page.css
+++ b/assets/css/style-work_page.css
@@ -22,20 +22,24 @@
 
 .player_cover img {
     width: 40%;
+    min-width: 300px;
     object-fit: contain;
 }
 
 .work_title {
     height: 5vw;
+    min-height: 40px;
 
     font-weight: 100;
-    font-size: 2vw;
+    font-size: calc(10px + 1.5vw);
 
     margin: 0vw 0vw;
 }
 
 .song_block audio {
     width: 41%;
+    min-width: 310px;
+    min-height: 50px;
 }
 
 .work_section {
@@ -43,25 +47,36 @@
     flex-direction: column;
     align-items: center;
 
+    font-size: calc(8px + 0.5vw);
+
     margin: 2vw 0vw;
 }
 
 .work_section_title {
     width: 80%;
-    font-size: 4vw;
+    font-size: calc(10px + 3vw);
 }
 
 .work_section_title p {
     text-align: center;
 }
 
+.work_section_title div {
+    text-align: center;
+    font-size: calc(8px + 0.5vw)
+}
+
 .lyrics_text {
     display: flex;
     width: 80%;
     justify-content: center;
-    font-size: 1vw;
+    font-size: calc(8px + 0.5vw);
 }
 
 .lyrics_text div {
     margin: 0vw 3vw;
+}
+
+.chinese_lyrics {
+    min-width: calc(90px + 6vw);
 }
